--- a/PHPSRePS/PHPSRePS.csproj
+++ b/PHPSRePS/PHPSRePS.csproj
@@ -44,6 +44,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddEditProductView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddEditProductView.Designer.cs">
+      <DependentUpon>AddEditProductView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="AddEditSaleView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddEditSaleView.Designer.cs">
+      <DependentUpon>AddEditSaleView.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Product.cs" />
+    <Compile Include="CreateReportView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateReportView.Designer.cs">
+      <DependentUpon>CreateReportView.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainView.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +77,16 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sale.cs" />
+    <Compile Include="SalesView.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SalesView.Designer.cs">
+      <DependentUpon>SalesView.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="InventoryView.resx">
+      <DependentUpon>InventoryView.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
