--- a/PHPSRePS/packages.config
+++ b/PHPSRePS/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="NUnit" version="3.8.1" targetFramework="net45" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net45" />
 </packages>
