--- a/PHPSRePS/PHPSRePS.csproj
+++ b/PHPSRePS/PHPSRePS.csproj
@@ -67,6 +67,7 @@
     </Compile>
     <Compile Include="Database.cs" />
     <Compile Include="HasSQLTable.cs" />
+    <Compile Include="ItemSale.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="CreateReportView.cs">
       <SubType>Form</SubType>
@@ -80,12 +81,6 @@
     <Compile Include="MainView.Designer.cs">
       <DependentUpon>MainView.cs</DependentUpon>
     </Compile>
-    <Compile Include="InventoryView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="InventoryView.Designer.cs">
-      <DependentUpon>InventoryView.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -94,15 +89,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="Sale.cs" />
-    <Compile Include="SalesView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SalesView.Designer.cs">
-      <DependentUpon>SalesView.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="InventoryView.resx">
-      <DependentUpon>InventoryView.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
