added user profile page, loging screen and safety checks

--- a/PHPSRePS/PHPSRePS.csproj
+++ b/PHPSRePS/PHPSRePS.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>AddEditSaleView.cs</DependentUpon>
     </Compile>
     <Compile Include="Database.cs" />
+    <Compile Include="Employee.cs" />
     <Compile Include="HasSQLTable.cs" />
     <Compile Include="ItemSale.cs" />
     <Compile Include="Product.cs" />
