forecast hald done

--- a/PHPSRePS/PHPSRePS.csproj
+++ b/PHPSRePS/PHPSRePS.csproj
@@ -131,5 +131,8 @@
   <ItemGroup>
     <None Include="Properties\GUI Resources\Home View\Search Icon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\GUI Resources\Sidebar\Forecast.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
