--- a/PHPSRePS/PHPSRePS.csproj
+++ b/PHPSRePS/PHPSRePS.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Report.cs" />
     <Compile Include="Sale.cs" />
     <Compile Include="SalesReport.cs" />
+    <Compile Include="sentmail.cs" />
     <EmbeddedResource Include="MainView.resx">
       <DependentUpon>MainView.cs</DependentUpon>
     </EmbeddedResource>
